--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ Flask-SQLAlchemy==2.5.1
 greenlet==1.0.0
 gunicorn==20.1.0
 idna==2.10
+importlib-metadata==3.10.1
 itsdangerous==1.1.0
 Jinja2==2.11.3
 joblib==1.0.1
@@ -42,6 +43,8 @@ threadpoolctl==2.1.0
 tqdm==4.60.0
 tweepy==3.10.0
 typer==0.3.2
+typing-extensions==3.7.4.3
 urllib3==1.26.4
 wasabi==0.8.2
 Werkzeug==1.0.1
+zipp==3.4.1
